--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               
             </ul>
             <div class="card-footer align-self-center">
-              <a class="btn btn-success" href="portafolio.html">PORTAFOLIO</a>
+              <a class="btn btn-success" href="https://gabosorio.github.io/Portafolio_gosorio/">PORTAFOLIO</a>
             </div>
           </div>
         </div>
